# rolodex

./: .gitignore  README.md  crm.py  db.py  db_load.py  dev-notes.md  main.py  pyproject.toml  tui_editor.py
.github/: FUNDING.yml
