[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rolodex"
version = "0.1.0"
description = "Simple rolodex DB utilities"
requires-python = ">=3.11"
dependencies = [
  "rich>=13",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
  "tests",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]



